# M.A.R.L.IN-edna-species-classifier

./: README.md  arch.tldr  docker-compose.yml  prompt
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/api/: models.py
backend/app/core/: config.py  database.py  models.py  utils.py
backend/app/services/: clustering.py  ml_pipeline.py  taxonomy.py
backend/docs/: API.md  ARCH.md  DEPLOYMENT.md  ML_MODEL.md  OVERVIEW.md  README.md  REFERENCE.md  SECURITY.md  WORKFLOW.md
backend/notebooks/: 01_preprocessing.ipynb  02_embedding.ipynb  03_clustering.ipynb  04_analysis.ipynb  05_model_training.ipynb  06_model_evaluation.ipynb
backend/pipelines/: deployment_pipeline.py  training_pipeline.py
backend/src/api/v1/: auth_api.py
backend/src/database/: base.py  mongo_client.py
backend/src/models/: auth_model.py
backend/src/services/: auth_service.py  storage_service.py
backend/steps/: __init__.py  clustering.py  embedding.py  evaluate.py  ingestion.py  preprocessing.py  training.py
backend/tests/: test_training_pipeline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Badge.jsx  Card.jsx  FormInputs.jsx  Header.jsx  Layout.jsx  Loading.jsx  Modal.jsx  Sidebar.jsx  Table.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useData.js
frontend/src/pages/: ClusterDetail.jsx  Clusters.jsx  Dashboard.jsx  Metrics.jsx  SearchData.jsx  SequenceDetail.jsx  Sequences.jsx  Settings.jsx  SubmitData.jsx
