[project]
name = "edna-ml-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "biopython>=1.85",
    "boto3>=1.40.40",
    "celery>=5.5.3",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.117.1",
    "hdbscan>=0.8.40",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "minio>=7.2.17",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.3.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pymongo[srv]==3.12",
    "pytest>=8.4.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "scikit-bio>=0.7.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "umap-learn>=0.5.9.post2",
    "uvicorn[standard]>=0.37.0",
]
